<resources>
    <string name="app_name">Cupid</string>
    <string name="title_nav_header">Menu</string>
    <string name="info_nav_header">Allison McCoy</string>
    <string name="facebook_app_id">1683493518633929</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user">****Loi Nguyen****</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="introduce">In other words, it is a answer to a question of some kid. It is also that from with data ...</string>
    <string name="sign_up_bottom">Or if you\'d like to work as a guide then sign up here</string>
    <string name="enjoy_day">Enjoy 7 days of free VIP</string>
    <string name="enjoy_day_content">We\'re excited to offer you all our VIP features at no cost for 7 days.</string>
    <string name="enjoy_day_limit">or continued with limited version</string>
    <string name="say_bye_limited">Say Bye to limits...Become a VIP!</string>
    <string name="say_bye_limited1">All Popular users unlocked</string>
    <string name="say_bye_limited2">Become a Verified Profile</string>
    <string name="say_bye_limited3">All user that like you unlocked</string>
    <string name="say_bye_limited4">All profile visitors unlocked</string>
    <string name="say_bye_limited5">Increased profile visibility</string>
    <string name="say_bye_limited6">Remove all ads</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="hint_sign_up_username">Username</string>
    <string name="hint_sign_up_email">Email</string>
    <string name="hint_sign_up_password">Password</string>
    <string name="hint_sign_up_age">Age</string>
    <string name="hint_sign_up_country">Country</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="enter">Enter</string>
    <string name="button_login">Login</string>
    <string name="country">Country</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_an_account">Create an Account</string>
    <string name="reset_password">Reset the Password?</string>
    <string name="login">Log In</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="info_sign_up">And Book Your S<![CDATA[<font color=#17A1CA>tour</font>]]>yz experience today.It only take minutes</string>
    <string name="info_sign_up_bottom">Or if you\'d like to work as a <![CDATA[<font color=#17A1CA>guide</font>]]> then sign up here</string>
    <string name="back">Back</string>
    <string name="choice_card">Choice Type Card</string>
    <string name="choice_bank">Choice Bank</string>
    <string name="hint_id_card">ID card</string>

    <string-array name="values_age">

        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>

    <string-array name="values">

    <item>16</item>
    <item>17</item>
    <item>18</item>
    <item>19</item>
    <item>20</item>
    <item>21</item>
    <item>22</item>

    </string-array>


    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>
        <item>Gay</item>
        <item>Les</item>

    </string-array>


    <string-array name="who_see">

        <item>Everyone</item>
        <item>Girls</item>
        <item>Boys</item>

    </string-array>


    <string-array name="interested">

        <item>Everyone</item>
        <item>Girls</item>
        <item>Boys</item>
        <item>Les</item>
        <item>Gay</item>

    </string-array>


    <string-array name="i_am_here_to">
        <item>No Answer</item>
        <item>Make New Friends</item>
        <item>Chat</item>
        <item>Date</item>
    </string-array>

    <string-array name="drinking">
        <item>No Answer</item>
        <item>No</item>
        <item>Anti drinking</item>
        <item>Yes</item>
        <item>With Company</item>
    </string-array>

    <string-array name="smoking">
        <item>No Answer</item>
        <item>Non-Smoker</item>
        <item>Anti-Smoker</item>
        <item>Smoker</item>
    </string-array>

    <string-array name="relationship">
        <item>No Answer</item>
        <item>Single</item>
        <item>Taken</item>
        <item>Open</item>
    </string-array>


    <string-array name="living">
        <item>No Answer</item>
        <item>With Parents</item>
        <item>With Housemate(s)</item>
        <item>Student Dormitory</item>
        <item>With Partner</item>
        <item>Alone</item>
    </string-array>

    <string-array name="kids">
        <item>No Answer</item>
        <item>No, Never</item>
        <item>Someday</item>
        <item>Already Have</item>
    </string-array>


    <string-array name="education">
        <item>No Answer</item>
        <item>School Only</item>
        <item>College/University</item>
        <item>Advanced Degree</item>
    </string-array>


    <string-array name="card">
        <item>Kim bao</item>
        <item>Ngan Luong</item>
        <item>Paypal</item>
    </string-array>

    <!--navigation view-->
    <string name="item_nav_interest">Interested</string>
    <string name="item_nav_filter">FilterVC</string>
    <string name="item_nav_meet">Meet</string>
    <string name="item_nav_chat">Chat</string>
    <string name="item_nav_profiles">Profile Visitor</string>
    <string name="item_nav_who_like">Who Like Me</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_remove_ads">Remove ADS</string>
    <!---->
    <!--chat-->
    <string name="header_text_chat">Load Earlier Messages</string>
    <string name="toolbar_text_chat">JSQMessages</string>
    <!---->
    <!-- profile settings-->

    <string name="profile_title_basic">Basic info</string>
    <string name="profile_title_who_see">Who can see my profile ?</string>
    <string name="profile_title_account">Account</string>

    <string name="profile_photo">Photo</string>
    <string name="profile_snapchat">Snapchat</string>
    <string name="profile_kik">Kik</string>
    <string name="profile_instagram">Instagram</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_age">Age</string>
    <string name="profile_interested">Interested in</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_tags">Tags</string>

    <!---->

    <!-- profile settings-->

    <string name="filter_title_show_me">show me...</string>
    <string name="filter_title_age">of ages between</string>
    <string name="filter_title_show_user_have">show users who have</string>
    <string name="filter_title_show_user_profiles">show user with no profiles</string>

    <!---->

    <!--Choice Packed Coin-->
    <string name="title_toolbar_choice_packed_coin">Get Coins</string>
    <string name="packed_buy_coin">BUY COINS PACKAGES</string>
    <string name="packed_mega_coin">BUY MEGA COIN PACKAGES</string>
    <string name="packed_free_coin">FREE COINS</string>
    <string name="earn_free_coin">Earn Free Coins</string>
    <!---->

    <string name="sign_up">Sign Up</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="confirm_text">By clicking "Sing up" you confirm you are 18+ and accept our Terms and Privacy Policy</string>
    <string name="content_detail">In other words, it is the answer to a question of some kind...</string>

    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_female">Female</string>
    <string name="sign_up_male">Male</string>

    <string name="profile_setting_text">Profile</string>
    <string name="profile_setting_tag">Profile Info</string>

    <string name="status_current">Looking for a good launch, love meeting new people so text me :)</string>

    <!--invite friend-->
    <string name="title_invite">Friend</string>
    <string name="search_friend">Search</string>
    <string name="friend_offline">OFFLINE FRIEND</string>
    <string name="friend_request">FRIEND REQUEST</string>
    <string name="edit">Edit</string>
    <string name="contract">CONTRACT</string>

    <!--end invite friend-->

    <string name="check_connect">No network connection</string>

    <string name="cancel">Cancel</string>
    <string name="i_am_here_to">I am here to</string>
    <string name="relationship">Relationship</string>
    <string name="drinking">Drinking</string>
    <string name="smoking">Smoking</string>
    <string name="living">Living</string>
    <string name="kids">Kids</string>
    <string name="education">Education</string>
    <string name="job">Job</string>
    <string name="company">Company</string>
    <string name="contact">Contact</string>
    <string name="ooovoo">Oovoo</string>
    <string name="skype">Skype</string>
    <string name="viber">Viber</string>
    <string name="everyone">Everyone</string>
    <string name="age_range">Age Range</string>


    <string name="earn_coins">Earn Coins</string>
    <string name="vip_upgrade">Vip Upgrade</string>
    <string name="share_add_me">Share App</string>
    <string name="term_of_use">Term of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="del_account">Delete Account</string>

    <string name="message_no_save_profile">Your profile are not saved</string>
    <string name="save">Save</string>

    <string name="message_no_item">No item.Click to add</string>

    <!--context menu upload-->

        <string name="popmenu_avatar_upload">Upload avatar</string>
        <string name="popmenu_avatar_edit">Edit avatar</string>
        <string name="popmenu_avatar_delete">Delete avatar</string>

    <!---->

    <!--context menu upload-->

    <string name="popmenu_cover_upload">Upload image cover</string>
    <string name="popmenu_cover_edit">Edit image cover</string>
    <string name="popmenu_cover_delete">Delete image cover</string>

    <!---->
</resources>