<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/bg_new"
    android:weightSum="10"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65">

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.25"
        >
            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv1"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/sign_up_now"
                android:textAllCaps="false"
                android:textColor="@color/textcolorsigup"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv2"
                android:layout_marginBottom="40dp"
                android:gravity="center_horizontal"
                android:text="@string/info_sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:text="@string/info_sign_up_bottom"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"/>
    </RelativeLayout>
</LinearLayout>