<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2x"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/backgroundinputlayout"
            android:layout_marginBottom="@dimen/margin_bottom_input_layout"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ipemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/margin_left"
                android:paddingRight="@dimen/margin_right"
                android:textColorHint="@color/inputlayout">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_sign_up_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:theme="@style/Theme.App.Base"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ippassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/margin_left"
                android:paddingRight="@dimen/margin_right"
                android:textColorHint="@color/inputlayout">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_sign_up_password"
                    android:paddingBottom="@dimen/margin_editText_bottom"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/button_padding"
            android:layout_marginBottom="@dimen/margin_bottom_button_enter"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_button_login"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_text_bottom"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textSize="20sp"/>
    </RelativeLayout>
</LinearLayout>