<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/bg_new"
    android:weightSum="10"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65">

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.25"
        >
        <LinearLayout
            android:id="@+id/llinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundinputlayout"
            android:layout_above="@+id/btn_login"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ipemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/margin_left"
                android:paddingRight="@dimen/margin_right"
                android:textColorHint="@color/color_app">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_sign_up_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_signup"
                    android:theme="@style/Theme.App.Base.loginNew"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ippassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/margin_left"
                android:paddingRight="@dimen/margin_right"
                android:textColorHint="@color/color_app">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_sign_up_password"
                    android:paddingBottom="@dimen/margin_left"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_signup"
                    android:theme="@style/Theme.App.Base.loginNew"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/forget"
            android:padding="@dimen/button_padding"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/margin_editText_bottom"
            android:layout_marginRight="@dimen/margin_right"
            android:background="@drawable/border_button"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_signup"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textSize="20sp"/>
    </RelativeLayout>
</LinearLayout>